refactor: moved auto-commit to own composite action

--- a/.github/actions/npm-cache/action.yml
+++ b/.github/actions/npm-cache/action.yml
@@ -24,7 +24,7 @@ runs:
       with:
         node-version: ${{ inputs.nodeVersion }}
 
-    - name: Display node and npm version
+    - name: 🖼️ Display node and npm version
       shell: bash
       run: |
         node --version
