--- a/.github/workflows/99-self-healing-dependabot-updates.yml
+++ b/.github/workflows/99-self-healing-dependabot-updates.yml
@@ -1,24 +1,23 @@
-name: Auto-Format with Stylelint and Prettier on PR for "self-healing" PRs
+name: Auto-Format with Stylelint and Prettier
 
 on:
   workflow_call:
 
 jobs:
   format:
+    name: 🆙 Auto-Format
     if: ${{ github.actor == 'dependabot[bot]' }}
     runs-on: ubuntu-24.04 # Use Ubuntu 24.04 explicitly
     permissions:
       contents: write
       pull-requests: write
-    env:
-      NEW_PR_BRANCH: "${{ github.head_ref }}-auto"
     steps:
-      - name: Checkout code
+      - name: ⏬ Checkout code
         uses: actions/checkout@v4
         with:
           ref: ${{ github.head_ref }}
 
-      - name: Check if Stylelint or Prettier update PR
+      - name: 🔍 Check if Stylelint or Prettier update PR
         id: check_pr
         run: |
           echo "PR title: ${{ github.event.pull_request.title }}"
@@ -32,60 +31,31 @@ jobs:
             echo "No Stylelint or prettier updates detected."
           fi
 
-      - name: Set up Node.js
+      - name: 🆙 Set up Node.js
         if: env.stylelint_update == 'true' || env.prettier_update == 'true'
         uses: actions/setup-node@v4
         with:
           node-version-file: ".nvmrc"
 
-      - name: Install dependencies
+      - name: ⏬ Install dependencies
         if: env.stylelint_update == 'true' || env.prettier_update == 'true'
         run: |
           npm ci
 
-      - name: Run Stylelint to format the code
+      - name: 🏃 Run Stylelint to format the code
         if: env.stylelint_update == 'true'
         run: |
           npm run lint:stylelint --fix
 
-      - name: Run Prettier to format the code
+      - name: 🏃 Run Prettier to format the code
         if: env.prettier_update == 'true'
         run: |
-          npx --no prettier . --write
+          npm run fmt
 
-      # https://docs.github.com/en/apps/creating-github-apps/authenticating-with-a-github-app/making-authenticated-api-requests-with-a-github-app-in-a-github-actions-workflow
-      - name: 🧬 Generate a token
+      - name: 🚘 Auto commit
         if: env.stylelint_update == 'true' || env.prettier_update == 'true'
-        id: generate-token
-        uses: actions/create-github-app-token@v2
+        uses: ./.github/actions/auto-commit
         with:
-          app-id: ${{ vars.AUTO_MERGE_APP_ID }}
-          private-key: ${{ secrets.AUTO_MERGE_PRIVATE_KEY }}
-
-      - name: 🏗️ Create new branch and commit changes
-        if: env.stylelint_update == 'true' || env.prettier_update == 'true'
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          
-          git checkout -b "$NEW_PR_BRANCH"
-          git add .
-          
-          # We can't use semantic commits here because of the if statement in the workflow
-          git commit --no-verify --all -m "auto format code" || echo "No changes to commit"
-          git push -f origin "$NEW_PR_BRANCH"
-      
-      - name: 🪗 Create Pull Request
-        if: env.stylelint_update == 'true' || env.prettier_update == 'true'
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh pr create --base ${{ github.head_ref }} --head "$NEW_PR_BRANCH" --title "Automated PR: Auto update snapshots" --body "This PR was created automatically by a GitHub Action."
-          
-      - name: 🤖 Squash the PR
-        if: env.stylelint_update == 'true' || env.prettier_update == 'true'
-        run: gh pr merge --squash "$NEW_PR_BRANCH"
-        env:
-          GITHUB_TOKEN: ${{ steps.generate-token.outputs.token }}
+          branch-name: "${{ github.head_ref }}-auto"
+          commit-message: "auto format code"
+          commit-files: "."
