--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clean": "git clean -dfx --exclude=.env",
     "commit:updated-snapshots": "git diff --name-only --diff-filter=M | xargs git add && git commit -m 'test: updated snapshots'",
     "dev": "npm run dev --workspace=scripts",
+    "docs:button": "typedoc",
     "generate:component": "npm run generate:component --workspace=@db-ux/core-components",
     "lint": "npm-run-all -p lint:*",
     "lint:jscpd": "jscpd . --exitCode 1 --config .config/.jscpd.json",
@@ -101,6 +102,8 @@
     "tar": "^7.4.3",
     "tslib": "^2.8.1",
     "tsx": "^4.19.4",
+    "typedoc": "^0.28.5",
+    "typedoc-plugin-markdown": "^4.6.4",
     "typescript": "^5.4.5",
     "validate-branch-name": "^1.3.2",
     "vite": "6.3.5",
