--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@axe-core/playwright": "^4.10.2",
     "@commitlint/cli": "19.8.1",
     "@commitlint/config-conventional": "19.8.1",
+    "@csstools/postcss-logical-overflow": "^2.0.0",
     "@db-ux/db-theme": "3.1.0",
     "@double-great/stylelint-a11y": "3.0.4",
     "@guidepup/guidepup": "0.24.0",
