feat(): add postinstall script to copy copilot instruction to corresponding file

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -10,6 +10,7 @@
   "author": "General technical components out of DB UX Design System (Version 3)",
   "license": "Apache-2.0",
   "files": [
+    ".github/copilot-instructions.md",
     "build"
   ],
   "scripts": {
@@ -38,6 +39,7 @@
     "dev:vue": "nodemon --watch src --watch scripts -e tsx,ts -x \"npm run compile:vue\"",
     "generate:component": "hygen mitosis new",
     "generate:docs": "hygen update-docs new",
+    "postinstall": "node ../../scripts/copy-copilot-instructions.js",
     "prepack": "npm run copy-assets",
     "start": "nodemon --watch src --watch scripts --watch scripts -e js,tsx,ts,scss,json -x \"npm run build\""
   },
