--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "tsx": "^4.19.4",
     "typedoc": "^0.28.5",
     "typedoc-plugin-markdown": "^4.6.4",
+    "typedoc-plugin-merge-modules": "^7.0.0",
     "typescript": "^5.4.5",
     "validate-branch-name": "^1.3.2",
     "vite": "6.3.5",
