feat: self healing dependabot updates (#4292)
* feat: self healing dependabot updates

for prettier and stylelint updates

* Create 99-self-healing-dependabot-updates.yml

--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "clean": "git clean -dfx --exclude=.env",
     "commit:updated-snapshots": "git diff --name-only --diff-filter=M | xargs git add && git commit -m 'test: updated snapshots'",
     "dev": "npm run dev --workspace=scripts",
+    "fmt": "prettier . --write",
     "generate:component": "npm run generate:component --workspace=@db-ux/core-components",
     "lint": "npm-run-all -p lint:*",
     "lint:jscpd": "jscpd . --exitCode 1 --config .config/.jscpd.json",
     "lint:markdownlint": "markdownlint -c .config/.markdown-lint.yml **/*.md",
-    "lint:stylelint": "stylelint **/*.scss",
+    "lint:stylelint": "stylelint **/*.{css,scss}",
     "lint:xo": "cross-env TIMING=1 NODE_OPTIONS=\"--max-old-space-size=4096\" xo",
     "prepare": "husky",
     "regenerate:screenshots": "npm run build && npm run build --workspace=react-showcase && docker-compose -f ./e2e/docker-compose.regenerate.yml up",
