--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -15,6 +15,10 @@ jobs:
   dependabot:
     uses: ./.github/workflows/99-auto-merge.yml
 
+  self-healing-dependabot-updates:
+    uses: ./.github/workflows/99-self-healing-dependabot-updates.yml
+    secrets: inherit
+
   codeql:
     uses: ./.github/workflows/99-codeql-analysis.yml
 
