fix: issues with auto-commit

--- a/.github/workflows/02-e2e-regenerated-snapshots-commit.yml
+++ b/.github/workflows/02-e2e-regenerated-snapshots-commit.yml
@@ -70,3 +70,6 @@ jobs:
           branch-name: "${{ github.head_ref }}-auto"
           commit-message: "auto update snapshots"
           commit-files: "__snapshots__/*"
+          auto-merge-app-id: ${{ vars.AUTO_MERGE_APP_ID }}
+          auto-merge-private-key: ${{ secrets.AUTO_MERGE_PRIVATE_KEY }}
+          gh-token: ${{ secrets.GITHUB_TOKEN }}
