--- a/.github/workflows/99-self-healing-dependabot-updates.yml
+++ b/.github/workflows/99-self-healing-dependabot-updates.yml
@@ -45,6 +45,7 @@ jobs:
       - name: 🏃 Run Stylelint to format the code
         if: env.stylelint_update == 'true'
         run: |
+          npm run build --workspace=@db-ux/core-stylelint
           npm run lint:stylelint --fix
 
       - name: 🏃 Run Prettier to format the code
