--- a/.github/workflows/01-lint.yml
+++ b/.github/workflows/01-lint.yml
@@ -16,6 +16,7 @@ jobs:
 
       - name: ⚡ Run Lint
         run: |
+          npm run postinstall --workspace=nuxt-showcase
           npm run build --workspace=@db-ux/core-stylelint
           npm run lint
 
