--- a/.github/workflows/02-e2e-regenerated-snapshots-commit.yml
+++ b/.github/workflows/02-e2e-regenerated-snapshots-commit.yml
@@ -55,7 +55,7 @@ jobs:
         if: inputs.patternhub
         with:
           name: snapshots-patternhub
-          path: ./__snapshots__/
+          path: ./__snapshots__/foundations
 
       - name: ⏬ Download showcase
         uses: actions/download-artifact@v4
