--- a/package.json
+++ b/package.json
@@ -70,6 +70,9 @@
     "@guidepup/guidepup": "0.24.0",
     "@guidepup/playwright": "^0.14.2",
     "@guidepup/record": "^0.1.0",
+    "@playwright/experimental-ct-core": "1.53.1",
+    "@playwright/experimental-ct-react": "1.53.1",
+    "@playwright/experimental-ct-vue": "1.53.1",
     "@playwright/test": "1.53.1",
     "accessibility-checker": "^4.0.6",
     "adm-zip": "0.5.16",
@@ -88,6 +91,8 @@
     "markdownlint-cli": "^0.45.0",
     "ng-packagr": "19.2.2",
     "npm-run-all2": "8.0.4",
+    "playwright": "1.53.1",
+    "playwright-core": "1.53.1",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
     "prettier": "^3.6.2",
