--- a/.github/workflows/02-e2e-foundations.yml
+++ b/.github/workflows/02-e2e-foundations.yml
@@ -17,15 +17,13 @@ jobs:
     runs-on: ubuntu-24.04 # Use Ubuntu 24.04 explicitly
     container:
       image: mcr.microsoft.com/playwright:v${{ inputs.version }}
+      options: --user 1001
     steps:
       - name: ⏬ Checkout repo
         uses: actions/checkout@v4
 
       - name: 🔄 Init Cache
         uses: ./.github/actions/npm-cache
-
-      - name: 📲 Install esbuild (binary workaround)
-        run: npm i -D esbuild-linux-64
 
       - name: ⏬ Download foundations build
         uses: actions/download-artifact@v4
@@ -35,8 +33,6 @@ jobs:
 
       - name: 👩‍🔬 Test with Playwright 🎭
         working-directory: ./packages/foundations
-        env:
-          HOME: /root
         run: npm run test:e2e
 
       - name: 🆙 Upload test results
