--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@db-ux/core-web",
   "version": "0.0.0",
   "type": "module",
-  "description": "",
+  "description": "DB UX Design System",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/db-ux-design-system/core-web.git"
@@ -11,7 +11,7 @@
   "bugs": {
     "url": "https://github.com/db-ux-design-system/core-web/issues"
   },
-  "author": "",
+  "author": "DB Systel GmbH",
   "license": "Apache-2.0",
   "private": true,
   "workspaces": [
@@ -63,6 +63,7 @@
     "@angular/router": "19.2.14",
     "@angular/ssr": "19.2.15",
     "@axe-core/playwright": "^4.10.2",
+    "@babel/eslint-parser": "^7.27.0",
     "@commitlint/cli": "19.8.1",
     "@commitlint/config-conventional": "19.8.1",
     "@db-ux/db-theme": "3.2.0",
@@ -87,7 +88,7 @@
     "find-versions": "^6.0.0",
     "glob": "^11.0.3",
     "http-server": "14.1.1",
-    "husky": "9.1.7",
+    "husky": "^9.1.7",
     "jscpd": "^4.0.5",
     "lint-staged": "^16.1.2",
     "markdownlint-cli": "^0.45.0",
