--- a/.github/workflows/02-e2e-foundations.yml
+++ b/.github/workflows/02-e2e-foundations.yml
@@ -21,6 +21,8 @@ jobs:
     steps:
       - name: ⏬ Checkout repo
         uses: actions/checkout@v4
+        with:
+          lfs: "true"
 
       - name: 🔄 Init Cache
         uses: ./.github/actions/npm-cache
