--- a/.github/workflows/02-e2e-showcases.yml
+++ b/.github/workflows/02-e2e-showcases.yml
@@ -32,6 +32,8 @@ jobs:
     steps:
       - name: ⏬ Checkout repo
         uses: actions/checkout@v4
+        with:
+          lfs: "true"
 
       - name: 🔄 Init Cache
         uses: ./.github/actions/npm-cache
