--- a/.github/workflows/02-e2e.yml
+++ b/.github/workflows/02-e2e.yml
@@ -25,6 +25,11 @@ jobs:
         shardIndex: [1, 2, 3]
         shardTotal: [3]
     steps:
+      - name: ⏬ Install Git LFS
+        run: |
+          git lfs install
+          git lfs pull
+
       - name: ⏬ Checkout repo
         uses: actions/checkout@v4
         with:
