--- a/__snapshots__/select/component/firefox/DBSelect-should-have-same-aria-snapshot.yaml
+++ b/__snapshots__/select/component/firefox/DBSelect-should-have-same-aria-snapshot.yaml
@@ -1,6 +1,6 @@
 - text: Label
 - combobox "Label":
-  - option "Test1" [selected]
+  - option "Test1"
   - option "Test2"
-- text: Description
+- text: Label Description
 - status
