fix: issue with playwright configs

--- a/showcases/react-showcase/package.json
+++ b/showcases/react-showcase/package.json
@@ -12,8 +12,8 @@
     "regenerate:aria-snapshots": "cross-env showcase=react-showcase npx playwright test -c ../playwright.aria-snapshots.ts --update-snapshots",
     "regenerate:visual-snapshots": "cross-env showcase=react-showcase npx playwright test -c ../playwright.visual-snapshots.ts --update-snapshots",
     "start": "vite",
-    "test-sr:macos": "cross-env showcase=react-showcase npx playwright test --config=playwright.screen-reader.macos.ts",
-    "test-sr:windows": "cross-env showcase=react-showcase npx playwright test --config=playwright.screen-reader.windows.ts",
+    "test-sr:macos": "cross-env showcase=react-showcase npx playwright test --config=./playwright.screen-reader.macos.ts",
+    "test-sr:windows": "cross-env showcase=react-showcase npx playwright test --config=./playwright.screen-reader.windows.ts",
     "test:a11y-checker": "cross-env showcase=react-showcase npx playwright test --config=../playwright.a11y-checker.ts",
     "test:aria-snapshots": "cross-env showcase=react-showcase npx playwright test --config=../playwright.aria-snapshots.ts",
     "test:axe-core": "cross-env showcase=react-showcase npx playwright test --config=../playwright.axe-core.ts",
