--- a/.github/workflows/02-e2e-showcases.yml
+++ b/.github/workflows/02-e2e-showcases.yml
@@ -39,6 +39,8 @@ jobs:
     steps:
       - name: ⏬ Checkout repo
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # fetch all history for all branches and tags
 
       - name: 🔄 Init Cache
         uses: ./.github/actions/npm-cache
