--- a/.github/workflows/02-e2e-showcases.yml
+++ b/.github/workflows/02-e2e-showcases.yml
@@ -105,7 +105,9 @@ jobs:
 
       - name: 👩‍🔬 Test a11y-checker with Playwright 🎭
         shell: bash
-        if: github.event.pull_request != null && env.aria-snapshots-changed=='true'
+        if: |
+          github.event.pull_request != null &&
+          steps.aria-snapshots.outputs.aria-snapshots-changed=='true'
         run: |
           npm run test:a11y-checker --workspace=${{ inputs.showcase }} -- --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
 
