--- a/output/react/package.json
+++ b/output/react/package.json
@@ -19,7 +19,7 @@
     "mv:package.json": "cpr package.json ../../build-outputs/react/package.json -o",
     "mv:readme": "cpr README.md ../../build-outputs/react/README.md -o",
     "open:report": "npx playwright show-report",
-    "postbuild": "npm-run-all -p mv:*",
+    "postbuild": "npm-run-all --parallel mv:*",
     "regenerate:screenshots": "playwright test -c playwright.config.ts --update-snapshots",
     "test:components": "playwright test -c playwright.config.ts",
     "test:windows": "playwright test -c playwright.screen-reader.win.ts",
