--- a/output/stencil/package.json
+++ b/output/stencil/package.json
@@ -25,7 +25,7 @@
     "mv:dist": "cpr dist ../../build-outputs/wc-core-components/dist -o",
     "mv:package.json": "cpr package.json ../../build-outputs/wc-core-components/package.json -o",
     "mv:readme": "cpr README.md ../../build-outputs/wc-core-components/README.md -o",
-    "postbuild": "npm-run-all -p build:* -p mv:*",
+    "postbuild": "npm-run-all --parallel build:* --parallel mv:*",
     "start": "stencil build --watch"
   },
   "devDependencies": {
