--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -13,7 +13,7 @@
     "build"
   ],
   "scripts": {
-    "build": "npm-run-all -p build-components build-assets -s build-style:*",
+    "build": "npm-run-all --parallel build-components build-assets -s build-style:*",
     "build-assets": "cpr src build -o -f \"(.ts|.tsx|.md|.html)$\"",
     "build-components": "npm-run-all build:mitosis build-components:post build-components:docs",
     "build-components:docs": "npm run build:cem -w @db-ux/wc-core-components",
