--- a/output/vue/package.json
+++ b/output/vue/package.json
@@ -32,7 +32,7 @@
     "mv:dist": "cpr dist ../../build-outputs/vue/dist -o",
     "mv:package.json": "cpr package.json ../../build-outputs/vue/package.json -o",
     "mv:readme": "cpr README.md ../../build-outputs/vue/README.md -o",
-    "postbuild": "npm-run-all -p mv:*",
+    "postbuild": "npm-run-all --parallel mv:*",
     "test:components": "playwright test -c playwright.config.ts",
     "test:components:ui": "playwright test -c playwright.config.ts --ui"
   },
