--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "build-outputs": "npm run build-outputs --workspace=scripts",
     "build-showcases": "npm run build-showcases --workspace=scripts",
     "clean": "git clean -dfx --exclude=.env",
+    "codestyle": "prettier . --write",
     "commit:updated-snapshots": "git diff --name-only --diff-filter=M | xargs git add && git commit -m 'test: updated snapshots'",
     "dev": "npm run dev --workspace=scripts",
-    "fmt": "prettier . --write",
     "generate:component": "npm run generate:component --workspace=@db-ux/core-components",
     "lint": "npm-run-all --parallel lint:*",
     "lint:jscpd": "jscpd . --exitCode 1 --config .config/.jscpd.json",
