--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,7 +1,7 @@
 {
 	"extends": [
 		"stylelint-config-standard",
-		"stylelint-config-sass-guidelines"
+		"stylelint-config-recommended-scss"
 	],
 	"plugins": [
 		"stylelint-use-logical",
@@ -31,42 +31,9 @@
 		"a11y/no-outline-none": true,
 		"a11y/selector-pseudo-class-focus": true,
 		"csstools/use-logical": ["always", { "except": ["float"] }],
-		"max-nesting-depth": null,
-		"scss/dollar-variable-colon-space-after": null,
 		"selector-type-no-unknown": [true, { "ignoreTypes": ["/^db/"] }],
 		"no-descending-specificity": null,
-		"selector-max-compound-selectors": null,
-		"selector-no-qualifying-type": [
-			true,
-			{
-				"ignore": ["attribute"]
-			}
-		],
 		"number-max-precision": null,
-		"annotation-no-unknown": [
-			true,
-			{
-				"ignoreAnnotations": ["default", "global"]
-			}
-		],
-		"declaration-property-value-no-unknown": true,
-		"@stylistic/block-opening-brace-space-before": null,
-		"@stylistic/color-hex-case": null,
-		"@stylistic/declaration-bang-space-after": null,
-		"@stylistic/declaration-bang-space-before": null,
-		"@stylistic/declaration-block-semicolon-newline-after": null,
-		"@stylistic/declaration-block-semicolon-space-before": null,
-		"@stylistic/declaration-block-trailing-semicolon": null,
-		"@stylistic/declaration-colon-space-after": null,
-		"@stylistic/declaration-colon-space-before": null,
-		"@stylistic/function-comma-space-after": null,
-		"@stylistic/function-parentheses-space-inside": null,
-		"@stylistic/indentation": null,
-		"@stylistic/media-feature-parentheses-space-inside": null,
-		"@stylistic/no-missing-end-of-source-newline": null,
-		"@stylistic/number-leading-zero": null,
-		"@stylistic/number-no-trailing-zeros": null,
-		"@stylistic/selector-list-comma-newline-after": null,
-		"@stylistic/string-quotes": null
+		"scss/operator-no-newline-after": null
 	}
 }
