fix: issue with mixed os cache

--- a/.github/workflows/01-init-playwright.yml
+++ b/.github/workflows/01-init-playwright.yml
@@ -25,4 +25,5 @@ jobs:
       - name: 🔄 Init Playwright Cache
         uses: ./.github/actions/playwright-cache
         with:
+          os: ${{ matrix.os }}
           version: ${{ inputs.version }}
