--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "@guidepup/guidepup": "0.24.0",
     "@guidepup/playwright": "^0.14.2",
     "@guidepup/record": "^0.1.0",
+    "@guidepup/setup": "^0.19.2",
     "@playwright/experimental-ct-core": "1.53.2",
     "@playwright/experimental-ct-react": "1.53.2",
     "@playwright/experimental-ct-vue": "1.53.2",
