--- a/.github/workflows/02-e2e-screen-reader.yml
+++ b/.github/workflows/02-e2e-screen-reader.yml
@@ -18,25 +18,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-13, windows-2022]
+        # os: [macos-13, windows-2022]
+        os: [windows-2022] # macOS is not perfectly supported yet, we disable it for now
         shardIndex: [1, 2, 3, 4]
         shardTotal: [4]
     steps:
       - name: ⏬ Checkout repo
         uses: actions/checkout@v4
-
-      - name: 🦮 Guidepup Setup
-        id: setup
-        continue-on-error: true
-        uses: guidepup/setup-action@0.17.2
-        with:
-          record: true
-
-      - name: 🦮 Guidepup Setup retry
-        if: steps.setup.outcome == 'failure'
-        uses: guidepup/setup-action@0.17.2
-        with:
-          record: true
 
       - name: 🔄 Init Cache
         uses: ./.github/actions/npm-cache
@@ -44,7 +32,13 @@ jobs:
       - name: 🔄 Init Playwright Cache
         uses: ./.github/actions/playwright-cache
         with:
+          os: ${{ matrix.os }}
           version: ${{ inputs.version }}
+
+      - name: 🦮 Guidepup Setup Windows
+        uses: guidepup/setup-action@0.17.2
+        with:
+          record: true
 
       - name: ⏬ Download react-showcase
         uses: actions/download-artifact@v4
