--- a/.github/workflows/01-init-playwright.yml
+++ b/.github/workflows/01-init-playwright.yml
@@ -14,6 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        # TODO: enable again after guidepup controlling Voiceover on MacOS 14 and 15 gets more stable
         # os: [macos-13, windows-2022]
         os: [windows-2022] # macOS is not perfectly supported yet, we disable it for now
     steps:
