--- a/.github/workflows/02-e2e-screen-reader.yml
+++ b/.github/workflows/02-e2e-screen-reader.yml
@@ -18,9 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # TODO: enable again after guidepup controlling Voiceover on MacOS 14 and 15 gets more stable
-        # os: [macos-13, windows-2022]
-        os: [windows-2022] # macOS is not perfectly supported yet, we disable it for now
+        os: [windows-2022, macos-14]
         shardIndex: [1, 2, 3, 4]
         shardTotal: [4]
     steps:
