chore: adapt skript calls and readme

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -37,12 +37,13 @@
     "dev:scss": "npm run build-style:01_sass -- --watch",
     "dev:stencil": "nodemon --watch src --watch scripts -e tsx,ts -x \"npm run compile:stencil\"",
     "dev:vue": "nodemon --watch src --watch scripts -e tsx,ts -x \"npm run compile:vue\"",
-    "docs:components": "typedoc --options ../../typedoc.json --tsconfig tsconfig.typedoc.json && node ../../scripts/documentation/merge-component-docs.js && rimraf docs/api/README.md",
+    "docs:components": "typedoc --options ../../typedoc.json --tsconfig tsconfig.typedoc.json",
     "docs:css": "mkdir -p output/css && for file in src/components/**/*.scss; do npx sassdoc2md \"$file\" \"output/css/$(basename \"$file\" .scss).md\"; done",
     "generate:component": "hygen mitosis new",
     "generate:copilot-instructions": "node ../../scripts/documentation/generate-copilot-instructions.js",
     "generate:docs": "hygen update-docs new",
     "generate:mitosis-snippets": "mitosis build -c configs/mitosis.snippet.config.cjs --src src/components/**/docs/*.docs.lite.tsx",
+    "merge:component-docs": "node ../../scripts/documentation/merge-component-docs.js && rimraf docs/api/README.md",
     "postinstall": "node ../../scripts/documentation/copy-copilot-instructions.js",
     "prepack": "npm run copy-assets",
     "prepare": "npm run generate:copilot-instructions",
