chore: moved script calls to scripts/package.json and adapt README

--- a/package.json
+++ b/package.json
@@ -29,9 +29,8 @@
     "build-showcases": "npm run build-showcases --workspace=scripts",
     "clean": "git clean -dfx --exclude=.env",
     "commit:updated-snapshots": "git diff --name-only --diff-filter=M | xargs git add && git commit -m 'test: updated snapshots'",
+    "copilot": "npm run copilot --workspace=scripts",
     "dev": "npm run dev --workspace=scripts",
-    "docs:extract-css": "node scripts/documentation/extract-css-vars.js",
-    "docs:generate-copilot-instructions": "npm --prefix packages/components run docs:components && npm --prefix packages/components run generate:mitosis-snippets && npm run docs:extract-css && npm --prefix packages/components run merge:component-docs && npm --prefix packages/components run generate:copilot-instructions",
     "generate:component": "npm run generate:component --workspace=@db-ux/core-components",
     "lint": "npm-run-all -p lint:*",
     "lint:jscpd": "jscpd . --exitCode 1 --config .config/.jscpd.json",
