--- a/scripts/package.json
+++ b/scripts/package.json
@@ -28,6 +28,12 @@
     "build:foundations": "npm run build --workspace=@db-ux/core-foundations",
     "build:migration": "npm run build --workspace=@db-ux/core-migration",
     "build:stylelint": "npm run build --workspace=@db-ux/core-stylelint",
+    "copilot": "npm-run-all copilot:typedoc copilot:mitosis-snippets copilot:extract-css copilot:merge-docs copilot:generate-instructions",
+    "copilot:extract-css": "node documentation/extract-css-vars.js",
+    "copilot:generate-instructions": "node documentation/generate-copilot-instructions.js",
+    "copilot:merge-docs": "node documentation/merge-component-docs.js && rimraf docs/api/README.md",
+    "copilot:mitosis-snippets": "npm run generate:mitosis-snippets --workspace=@db-ux/core-components",
+    "copilot:typedoc": "typedoc --options ../typedoc.json --tsconfig tsconfig.typedoc.json",
     "dev": "tsx dev.js",
     "dev:angular-components": "npm run dev:angular --workspace=@db-ux/core-components",
     "dev:plain-html-components": "npm run dev:html --workspace=@db-ux/core-components",
