--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -10,7 +10,6 @@
   "author": "General technical components out of DB UX Design System (Version 3)",
   "license": "Apache-2.0",
   "files": [
-    ".github/copilot-instructions.md",
     "build"
   ],
   "scripts": {
@@ -37,16 +36,11 @@
     "dev:scss": "npm run build-style:01_sass -- --watch",
     "dev:stencil": "nodemon --watch src --watch scripts -e tsx,ts -x \"npm run compile:stencil\"",
     "dev:vue": "nodemon --watch src --watch scripts -e tsx,ts -x \"npm run compile:vue\"",
-    "docs:components": "typedoc --options ../../typedoc.json --tsconfig tsconfig.typedoc.json",
-    "docs:css": "mkdir -p output/css && for file in src/components/**/*.scss; do npx sassdoc2md \"$file\" \"output/css/$(basename \"$file\" .scss).md\"; done",
     "generate:component": "hygen mitosis new",
-    "generate:copilot-instructions": "node ../../scripts/documentation/generate-copilot-instructions.js",
     "generate:docs": "hygen update-docs new",
-    "generate:mitosis-snippets": "mitosis build -c configs/mitosis.snippet.config.cjs --src src/components/**/docs/*.docs.lite.tsx",
-    "merge:component-docs": "node ../../scripts/documentation/merge-component-docs.js && rimraf docs/api/README.md",
+    "generate:mitosis-snippets": "mitosis build -c configs/mitosis.snippet.config.cjs",
     "postinstall": "node ../../scripts/documentation/copy-copilot-instructions.js",
     "prepack": "npm run copy-assets",
-    "prepare": "npm run generate:copilot-instructions",
     "start": "nodemon --watch src --watch scripts --watch scripts -e js,tsx,ts,scss,json -x \"npm run build\""
   },
   "dependencies": {
