--- a/package.json
+++ b/package.json
@@ -121,15 +121,15 @@
     "playwright-core": "1.54.1",
     "postcss": "^8.5.6",
     "postcss-cli": "^11.0.1",
-    "prettier": "^3.6.2",
-    "prettier-plugin-organize-imports": "^4.1.0",
+    "prettier": "3.6.2",
+    "prettier-plugin-organize-imports": "4.1.0",
     "prettier-plugin-pkg": "0.21.2",
     "replace-in-file": "^8.3.0",
     "rimraf": "6.0.1",
     "rxjs": "~7.8.2",
     "stylelint": "16.21.1",
     "stylelint-config-recommended-scss": "15.0.1",
-    "stylelint-config-standard": "^38.0.0",
+    "stylelint-config-standard": "38.0.0",
     "stylelint-use-logical": "2.1.2",
     "tslib": "^2.8.1",
     "tsx": "^4.20.3",
@@ -137,7 +137,7 @@
     "validate-branch-name": "^1.3.2",
     "vite": "6.3.5",
     "vitest": "^3.2.4",
-    "xo": "^1.2.0",
+    "xo": "1.2.0",
     "zone.js": "~0.15.1"
   },
   "overrides": {
